--- a/environment.yml
+++ b/environment.yml
@@ -26,9 +26,12 @@ dependencies:
   - httplib2==0.10.3
   - idna==2.6
   - oauth2client==4.1.2
+  - olefile==0.44
+  - pillow==4.3.0
   - protobuf==3.5.0.post1
   - pyasn1==0.4.2
   - pyasn1-modules==0.2.1
+  - pytesseract==0.1.7
   - requests==2.18.4
   - rsa==3.4.2
   - six==1.11.0
