--- a/environment.yml
+++ b/environment.yml
@@ -1,41 +1,45 @@
-name: yhacks
+name: QuizIt
 channels:
-- menpo
 - defaults
 dependencies:
+- ca-certificates=2017.08.26=h1d4fec5_0
 - certifi=2016.2.28=py36_0
+- libgcc-ng=7.2.0=h7cc24e2_2
+- openssl=1.0.2n=hb7f436b_0
 - pip=9.0.1=py36_1
 - python=3.6.2=0
+- readline=6.2=2
 - setuptools=36.4.0=py36_1
-- vc=14=0
-- vs2015_runtime=14.0.25420=0
+- sqlite=3.13.0=0
+- tk=8.5.18=0
 - wheel=0.29.0=py36_0
-- wincertstore=0.2=py36_0
+- xz=5.2.3=h55aa19d_2
+- zlib=1.2.11=ha838bed_2
 - pip:
   - beautifulsoup4==4.6.0
   - cachetools==2.0.1
   - chardet==3.0.4
   - google==1.9.3
-  - google-api-core==0.1.1
-  - google-api-python-client==1.6.4
-  - google-auth==1.2.1
+  - google-api-core==0.1.4
+  - google-api-python-client==1.6.5
+  - google-auth==1.3.0
   - google-auth-httplib2==0.0.3
   - google-cloud-language==1.0.0
   - googleapis-common-protos==1.5.3
-  - grpcio==1.7.0
+  - grpcio==1.9.1
   - httplib2==0.10.3
   - idna==2.6
   - oauth2client==4.1.2
   - olefile==0.44
   - pillow==4.3.0
-  - protobuf==3.5.0.post1
+  - protobuf==3.5.1
   - pyasn1==0.4.2
   - pyasn1-modules==0.2.1
   - pytesseract==0.1.7
+  - pytz==2017.3
   - requests==2.18.4
   - rsa==3.4.2
   - six==1.11.0
   - uritemplate==3.0.0
   - urllib3==1.22
-prefix: C:\Users\emily\Anaconda3\envs\yhacks
-
+prefix: /home/kevin/anaconda3/envs/QuizIt
